--- a/cookbook/random-numbers/rng-get-random-number.mdx
+++ b/cookbook/random-numbers/rng-get-random-number.mdx
@@ -21,176 +21,196 @@ SKALE's RNG is:
 - **Instant**: Available immediately, no waiting
 - **Secure**: Based on BLS threshold signatures from 11+ nodes
 
-## Method 1: Direct Precompiled Contract Call
+---
 
-Use inline assembly to call the precompiled contract at address `0x18`:
+## RNG Methods
 
-```solidity
-// SPDX-License-Identifier: MIT
-pragma solidity ^0.8.19;
+<Tabs>
+    <Tab title="Direct Precompile Call (0x18)">
 
-contract GetRandomNumber {
-    function getRandom() public view returns (bytes32) {
-        bytes32 randomValue;
-        assembly {
-            let freemem := mload(0x40)
-            let start_addr := add(freemem, 0)
-            if iszero(staticcall(gas(), 0x18, 0, 0, start_addr, 32)) {
-                invalid()
+        ### Direct Precompiled Contract Call
+
+        Use inline assembly to call the precompiled contract at address `0x18`:
+
+        ```solidity
+        // SPDX-License-Identifier: MIT
+        pragma solidity ^0.8.19;
+
+        contract GetRandomNumber {
+            function getRandom() public view returns (bytes32) {
+                bytes32 randomValue;
+                assembly {
+                    let freemem := mload(0x40)
+                    let start_addr := add(freemem, 0)
+                    if iszero(staticcall(gas(), 0x18, 0, 0, start_addr, 32)) {
+                        invalid()
+                    }
+                    randomValue := mload(freemem)
+                }
+                return randomValue;
             }
-            randomValue := mload(freemem)
-        }
-        return randomValue;
-    }
-    
-    function getRandomUint256() public view returns (uint256) {
-        return uint256(getRandom());
-    }
-}
-```
-
-## Method 2: Using SKALE RNG Library
-
-The easiest way is to use the SKALE RNG library:
-
-### Step 1: Install the Library
-
-```shell
-npm install @dirtroad/skale-rng
-```
-
-### Step 2: Import and Use
-
-```solidity
-// SPDX-License-Identifier: MIT
-pragma solidity ^0.8.19;
-
-import "@dirtroad/skale-rng/contracts/RNG.sol";
-
-contract MyRandomContract is RNG {
-    function generateRandom() external view returns (uint256) {
-        return getRandomNumber();
-    }
-    
-    function generateRandomInRange(uint256 min, uint256 max) external view returns (uint256) {
-        return getNextRandomRange(min, max);
-    }
-}
-```
-
-## Method 3: Helper Contract
-
-Create a reusable helper contract:
-
-```solidity
-// SPDX-License-Identifier: MIT
-pragma solidity ^0.8.19;
-
-contract RandomHelper {
-    function getRandomBytes32() public view returns (bytes32) {
-        bytes32 randomValue;
-        assembly {
-            let freemem := mload(0x40)
-            let start_addr := add(freemem, 0)
-            if iszero(staticcall(gas(), 0x18, 0, 0, start_addr, 32)) {
-                invalid()
-            }
-            randomValue := mload(freemem)
-        }
-        return randomValue;
-    }
-    
-    function getRandomUint256() public view returns (uint256) {
-        return uint256(getRandomBytes32());
-    }
-    
-    function getRandomInRange(uint256 min, uint256 max) public view returns (uint256) {
-        require(max > min, "Invalid range");
-        uint256 random = getRandomUint256();
-        return min + (random % (max - min + 1));
-    }
-}
-```
-
-## Usage Examples
-
-### Example 1: Simple Random Number
-
-```solidity
-contract SimpleRandom {
-    RandomHelper public randomHelper;
-    
-    constructor(address _randomHelper) {
-        randomHelper = RandomHelper(_randomHelper);
-    }
-    
-    function getRandomValue() external view returns (uint256) {
-        return randomHelper.getRandomUint256();
-    }
-}
-```
-
-### Example 2: Random Selection
-
-```solidity
-contract RandomSelector {
-    function selectRandom(uint256[] memory options) public view returns (uint256) {
-        uint256 random = getRandomUint256();
-        uint256 index = random % options.length;
-        return options[index];
-    }
-    
-    function getRandomUint256() private view returns (uint256) {
-        bytes32 randomBytes;
-        assembly {
-            let freemem := mload(0x40)
-            if iszero(staticcall(gas(), 0x18, 0, 0, freemem, 32)) {
-                invalid()
-            }
-            randomBytes := mload(freemem)
-        }
-        return uint256(randomBytes);
-    }
-}
-```
-
-### Example 3: Weighted Random Selection
-
-```solidity
-contract WeightedRandom {
-    function weightedSelect(uint256[] memory weights) public view returns (uint256) {
-        uint256 totalWeight = 0;
-        for (uint256 i = 0; i < weights.length; i++) {
-            totalWeight += weights[i];
-        }
-        
-        uint256 random = getRandomInRange(1, totalWeight);
-        uint256 cumulative = 0;
-        
-        for (uint256 i = 0; i < weights.length; i++) {
-            cumulative += weights[i];
-            if (random <= cumulative) {
-                return i;
+            
+            function getRandomUint256() public view returns (uint256) {
+                return uint256(getRandom());
             }
         }
-        
-        return weights.length - 1;
-    }
-    
-    function getRandomInRange(uint256 min, uint256 max) private view returns (uint256) {
-        bytes32 randomBytes;
-        assembly {
-            let freemem := mload(0x40)
-            if iszero(staticcall(gas(), 0x18, 0, 0, freemem, 32)) {
-                invalid()
+        ```
+
+    </Tab>
+    <Tab title="SKALE RNG Library">
+
+        ### Using SKALE RNG Library
+
+        The easiest way is to use the SKALE RNG library:
+
+        #### Step 1: Install the Library
+
+        ```shell
+        npm install @dirtroad/skale-rng
+        ```
+
+        #### Step 2: Import and Use
+
+        ```solidity
+        // SPDX-License-Identifier: MIT
+        pragma solidity ^0.8.19;
+
+        import "@dirtroad/skale-rng/contracts/RNG.sol";
+
+        contract MyRandomContract is RNG {
+            function generateRandom() external view returns (uint256) {
+                return getRandomNumber();
             }
-            randomBytes := mload(freemem)
+            
+            function generateRandomInRange(uint256 min, uint256 max) external view returns (uint256) {
+                return getNextRandomRange(min, max);
+            }
         }
-        uint256 random = uint256(randomBytes);
-        return min + (random % (max - min + 1));
-    }
-}
-```
+        ```
+
+    </Tab>
+    <Tab title="Helper Contract">
+
+        ### Helper Contract
+
+        Create a reusable helper contract:
+
+        ```solidity
+        // SPDX-License-Identifier: MIT
+        pragma solidity ^0.8.19;
+
+        contract RandomHelper {
+            function getRandomBytes32() public view returns (bytes32) {
+                bytes32 randomValue;
+                assembly {
+                    let freemem := mload(0x40)
+                    let start_addr := add(freemem, 0)
+                    if iszero(staticcall(gas(), 0x18, 0, 0, start_addr, 32)) {
+                        invalid()
+                    }
+                    randomValue := mload(freemem)
+                }
+                return randomValue;
+            }
+            
+            function getRandomUint256() public view returns (uint256) {
+                return uint256(getRandomBytes32());
+            }
+            
+            function getRandomInRange(uint256 min, uint256 max) public view returns (uint256) {
+                require(max > min, "Invalid range");
+                uint256 random = getRandomUint256();
+                return min + (random % (max - min + 1));
+            }
+        }
+        ```
+
+        ### Usage Examples
+
+        #### Example 1: Simple Random Number
+
+        ```solidity
+        // SPDX-License-Identifier: MIT
+        pragma solidity ^0.8.19;
+
+        import "./RandomHelper.sol";
+
+        contract SimpleRandom {
+            RandomHelper public randomHelper;
+            
+            constructor(address _randomHelper) {
+                randomHelper = RandomHelper(_randomHelper);
+            }
+            
+            function getRandomValue() external view returns (uint256) {
+                return randomHelper.getRandomUint256();
+            }
+        }
+        ```
+
+        #### Example 2: Random Selection
+
+        ```solidity
+        // SPDX-License-Identifier: MIT
+        pragma solidity ^0.8.19;
+
+        import "./RandomHelper.sol";
+
+        contract RandomSelector {
+            RandomHelper public randomHelper;
+
+            constructor(address _randomHelper) {
+                randomHelper = RandomHelper(_randomHelper);
+            }
+
+            function selectRandom(uint256[] memory options) public view returns (uint256) {
+                uint256 random = randomHelper.getRandomUint256();
+                uint256 index = random % options.length;
+                return options[index];
+            }
+        }
+        ```
+
+        #### Example 3: Weighted Random Selection
+
+        ```solidity
+        // SPDX-License-Identifier: MIT
+        pragma solidity ^0.8.19;
+
+        import "./RandomHelper.sol";
+
+        contract WeightedRandom {
+            RandomHelper public randomHelper;
+
+            constructor(address _randomHelper) {
+                randomHelper = RandomHelper(_randomHelper);
+            }
+
+            function weightedSelect(uint256[] memory weights) public view returns (uint256) {
+                uint256 totalWeight = 0;
+                for (uint256 i = 0; i < weights.length; i++) {
+                    totalWeight += weights[i];
+                }
+                
+                uint256 random = randomHelper.getRandomInRange(1, totalWeight);
+                uint256 cumulative = 0;
+                
+                for (uint256 i = 0; i < weights.length; i++) {
+                    cumulative += weights[i];
+                    if (random <= cumulative) {
+                        return i;
+                    }
+                }
+                
+                return weights.length - 1;
+            }
+        }
+        ```
+
+    </Tab>
+</Tabs>
+
+---
 
 ## Important Notes
 
@@ -227,4 +247,3 @@ Random numbers are generated per block. Multiple calls in the same block will re
 
 - [SKALE RNG Library](https://www.npmjs.com/package/@dirtroad/skale-rng)
 - [SKALE Developer Discord](https://discord.gg/skale)
-
